# puffer-bandits

./: .gitignore  CLAUDE.md  Code_review_claude.md  IMPROVEMENTS.md  LICENSE  Next_Steps_claude.md  Next_Steps_codex.md  README.md  __init__.py  advanced_agents.py  agents.py  bandit_env.py  contextual_env.py  devices_debug.py  future_plan.md  puffer_envs.py  pyproject.toml  runner_puffer.py  runner_puffer_advanced.py  runner_puffer_native.py  runs.txt  states.py
.github/workflows/: ci.yml
Fast, Precise Thompson Sampling in Bayesian Optimization/: bdu_2024.sty  main.bbl  main.bib  main.tex
Taking the GP Out of the Loop/: main.bbl  main.bib  main.tex
agents_ctx/: __init__.py  adversarial.py  base.py  lin.py  neural.py
configs/: bern_ducb_nonstat.yaml  bern_klucb.yaml  ctx_lints.yaml  ctx_linucb.yaml
core/: bernoulli.py  linear.py  nonstationary.py
envs/: __init__.py
puffer_bandits/: __main__.py  advanced_agents.py  agents.py  bandit_env.py  cli.py  contextual_env.py  devices_debug.py  plot_sweeps.py  puffer_envs.py  runner_ppo.py  runner_puffer.py  runner_puffer_advanced.py  runner_puffer_native.py  states.py
puffer_bandits/agents_ctx/: __init__.py  adversarial.py  base.py  lin.py  neural.py
puffer_bandits/core/: __init__.py  adversarial.py  bernoulli.py  linear.py  nonstationary.py
puffer_bandits/envs/: __init__.py
puffer_bandits/ui/: tui.py
puffer_bandits/utils/: device.py  linalg.py  wandb.py
scripts/: README.md  run_all.sh
tests/: test_agents_basics.py  test_env_validation.py  test_exp3_invariants.py  test_exp3ix.py  test_exp3ix_invariants.py  test_klucb.py  test_lin_agents_tiny.py  test_native_runner_smoke.py  test_nonstationary.py  test_safe_cholesky_agents.py  test_sherman_morrison.py
ui/: tui.py
utils/: constants.py  device.py  linalg.py
