[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puffer-bandits"
version = "0.1.0"
description = "GPU-enabled Multi-Armed Bandits using PufferLib and PyTorch"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Mehul" }]
dependencies = [
  "numpy>=1.24",
  "gymnasium>=0.29",
  "pufferlib>=0.5,<3",
  "rich>=13.7",
  "torch>=2.9.1",
  "omegaconf>=2.3",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
]
wandb = [
  "wandb>=0.16",
]
plots = [
  "matplotlib>=3.8",
]

[project.scripts]
puffer-bandits = "puffer_bandits.cli:main"
puffer-bandits-runner = "puffer_bandits.runner_puffer:main"
# Alias used in README for convenience
runner = "puffer_bandits.runner_puffer:main"
runner-ctx = "puffer_bandits.runner_puffer_advanced:main"
puffer-bandits-advanced = "puffer_bandits.runner_puffer_advanced:main"
puffer-bandits-native = "puffer_bandits.runner_puffer_native:main"

[tool.setuptools]
packages = ["puffer_bandits"]
package-dir = {"puffer_bandits" = "puffer_bandits"}
package-data = {"puffer_bandits" = ["py.typed"]}

[tool.uv]
# Use `uv sync` and `uv run`.

#[tool.uv.sources]
# Prefer installing pufferlib from PyPI. To use a local checkout instead,
# uncomment and point to a valid Python project path:
# pufferlib = { path = "../PufferLib" }

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["**/.jj/**", "**/.git/**", "**/.venv/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true  # torch, gym may not have stubs
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_optional = false
files = ["."]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
